# tensorcash

./: .dockerignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  REORG_SAFETY.md  REUSABLE_KYC.md  Readme.md  SECURITY.md  ZK_IMPLEMENTATION_CODEX.md  get_block_hash_299.py  launch_broker.sh  launch_linux.sh  launch_macbook.sh  test_pow_ab.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  tip.md
.github/workflows/: README.md  bcore-tests.yml  build-binaries.yml  build-desktop.yml  build-docker-images.yml  build-simple-worker.yml  ci.yml  kyc-prover-test.yml
deployments/desktop-app/: Package.swift  blockheader_generated.h  proof_generated.h  validation_generated.h
deployments/simple-worker/: .env.example  Dockerfile  docker-compose.yml  start-proxy.sh  start-vllm-mining.sh  start-vllm.sh  supervisord.conf
deployments/simple-worker-cpu/: Dockerfile  docker-compose.yml  start-llama.sh  supervisord.conf
deployments/simple-worker-h100-v19/: Dockerfile
documentation/: ASSET_RPC_PROCESS.md  core-node-service-doc.md  miner-service-doc.md  verification-service-doc.md  wallet-assets.md
documentation/verification/: full-verification.md  quick-verification.md
packaging/: README.md  validate-local.sh
packaging/common/: default-bitcoin.conf  validator-config.json
packaging/macos/: build-macos.sh  sign-and-notarize.sh
packaging/windows/: README-WINDOWS-BUILD.md  README.md  README.txt  build-windows.sh  do-key.bat  go.bat  import-key.bat  import-key.ps1  make-wallet.bat  run.bat  sign-windows.sh
scripts/: recover_block_validation_request.py  redis_replay_validation_requests.py
scripts/local-image-build/: core-api-build.sh  miner-api-build.sh  verification-api-build.sh
scripts/tests/: bench_proof_verifier.sh  chia_vdf.sh  core_single.sh  miner_test.sh  model_api.sh  proof_verifier.sh  triage_functional_failures.py
scripts/tools/: fb_dump.py
services/core-node/cosign-bridge/: .gitignore  AUDIT_TEST_VECTORS.txt  Cargo.toml  PRODUCTION_DEPLOYMENT.md  QT_INTEGRATION_API.md  README_TESTING.md  SECURITY_AUDIT_PACKAGE.md  test-local.sh
services/core-node/cosign-bridge/src/: lib.rs  main.rs  protocol.rs  session.rs  stdio.rs
services/core-node/cosign-bridge/src/bulletin_board/: discussion.rs  governance.rs  manager.rs  mod.rs  nostr.rs  types.rs
services/core-node/cosign-bridge/src/cross_chain/: dispatch.rs  mod.rs  state.rs  types.rs  validation.rs
services/core-node/cosign-bridge/src/cross_chain/eth/: htlc.rs  mod.rs  rpc.rs  signer.rs  watcher.rs
services/core-node/cosign-bridge/src/crypto/: mod.rs  test_mode.rs
services/core-node/cosign-bridge/src/transport/: envelope.rs  mod.rs  tor.rs  tor_control.rs  websocket.rs
services/core-node/cosign-bridge/tests/: bulletin_board_state_machine.rs  crypto_vectors.rs  discussion_state_machine.rs  e2e_bulletin_board.sh  e2e_bulletin_board_docker.sh  e2e_bulletin_board_simple.sh  envelope_broadcast_e2e.rs  nostr_integration.rs  test_deterministic.rs  tor_integration.rs  websocket_integration.rs
shared-utils/: LIBOQS_SUBMODULE.md  LICENSE  SHARED_UTILS_TEST.md
shared-utils/chiavdf/src/: CMakeLists.txt  Reducer.h  compile_asm.cpp  integer_common.h  prover_slow.h  vdf.h  vdf_base.hpp  verifier.h  xgcd_partial.c
shared-utils/chiavdf/src/c_bindings/: c_wrapper_ext.cpp
shared-utils/chiavdf/src/python_bindings/: fastvdf.cpp
shared-utils/pow-utils/: CMakeLists.txt  Makefile  admission_grinder.py  admission_scheduler.py  any_map_dump.h  bcred_table_r1024.cpp  bcred_table_r1024.h  bcred_table_r1024.py  blockheader_generated.h  build_with_cmake.sh  common_sampler_helper.py  compile_test.cpp  debug_messages.cpp  debug_uvalue.py  gen_bcred_table.py  pow_test.cpp  pow_utils.cpp  pow_utils.h  pow_utils.py  pow_v3.cpp  pow_v3.h  pow_v3.py  pow_zmq_writer.cpp  pow_zmq_writer.h  pow_zmq_writer_helpers.h  proof_generated.h  proof_processor.cpp  proof_processor.h  proof_processor_bindings.cpp  uint256_arithmetics.py  validation_generated.h  zmq_pow_writer.py
shared-utils/pow-utils/manual-tests/: README.md  debug_messages.py  pow_python_test.py  test_cpp_python_equivalency.sh  test_sha256.py  test_sha256_ragged.py  verify_equivalency.py
shared-utils/pow-utils/pfunpack/: CMakeLists.txt  libproofpack.cpp  libproofpack.h  pfunpack.cpp
shared-utils/pow-utils/proof/: __init__.py
shared-utils/pow-utils/test/: zmq_test_listener.py  zmq_writer_fromfile.py
shared-utils/pow-utils/tests/: .gitignore  README.md  build_and_test_all.sh  build_cpp_tests.sh  build_llama_v3_wiring_test.sh  build_pfunpack.sh  build_pfunpack_simple.sh  build_proofprocessor_simple.sh  build_soak_v3_cpp_check.sh  build_v3_cpp_test.sh  check_pow_ab_equivalence.py  compare_cpp_python.py  compare_cpp_python_real.py  conftest.py  debug_equivalence.py  gen_soak_cases_header.py  gen_v3_vectors.py  gen_v3_vectors_header.py  requirements.txt  run_tests.py  run_tests_standalone.py  soak_v3_cpp_check.cpp  soak_v3_offline_replay.py  test_adjusted_bits_equivalence.py  test_admission_grinder.py  test_admission_scheduler.py  test_api_check.py  test_byte_conversions.py  test_common_sampler_helper.py  test_compute_adjusted_bits.py  test_cpp_audit_emit.py  test_cpp_minimal  test_cpp_minimal.cpp  test_cpp_output  test_cpp_output.cpp  test_difficulty_arithmetic.py  test_fast_topk_mask.py  test_llama_v3_wiring.cpp  test_pfunpack_comprehensive.py  test_pfunpack_roundtrip.py  (+23 more)
shared-utils/pow-utils/tests/vectors/: v3_vectors.json  v3_vectors_embedded.h
tests/: pow_v10_v16_equivalence_test.sh
tips/: README.md  TEMPLATE.md  tip-0001-tip-process.md  tip-0002-scalar-settlement.md  tip-0003-prompt-chaining.md  tip-0004-operator-blindness.md  tip-0005-liveness-price-discovery-dex.md  tip-0006-multimodal-proof-of-inference.md  tip-0007-hosted-cosign-ceremonies.md  tip-0008-verifier-verdict-attestations.md  tip-0009-community-verification-service.md
windows-wallet-build/: .gitignore  README.md  go.bat  import-key.bat  run.bat  tensorcash_import_key.py
(+275 files in other folders)
