[package]
name = "cosign-bridge"
version = "0.1.0"
edition = "2021"
authors = ["TensorCash Developers"]
description = "Secure co-signing coordination bridge for TensorCash"
license = "MIT"

[lib]
name = "cosign_bridge"
path = "src/lib.rs"

[[bin]]
name = "cosign-bridge"
path = "src/main.rs"

[[bin]]
name = "cosign-local-relay"
path = "src/bin/local_relay.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"

# Tor - Production implementation using system Tor daemon + SOCKS5
tokio-socks = "0.5"  # SOCKS5 client for connecting through Tor
async-socks5 = "0.6"  # Alternative SOCKS5 implementation

# Cryptography - PAKE
spake2 = "0.3"

# Cryptography - Noise protocol
snow = { version = "0.9", features = ["default-resolver"] }

# AEAD
chacha20poly1305 = "0.10"

# Hashing
blake2 = "0.10"
sha2 = "0.10"
hmac = "0.12"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Key derivation
hkdf = "0.12"

# Random
rand = "0.8"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["std"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = "0.4"

# Base64 encoding
base64 = "0.21"

# Hex encoding
hex = "0.4"

# Constrain transitive base64ct to a pre-edition2024 version that works on stable cargo
base64ct = { version = "=1.7.3", default-features = false }

# Pin ALL ICU4X crates to 2.1.x — the 2.2.0 release requires rustc 1.86 but
# the Dockerfile uses rust:1.85. Pulled in via url → idna → idna_adapter.
icu_collections = { version = ">=2.1, <2.2" }
icu_locale_core = { version = ">=2.1, <2.2" }
icu_normalizer = { version = ">=2.1, <2.2" }
icu_normalizer_data = { version = ">=2.1, <2.2" }
icu_properties = { version = ">=2.1, <2.2" }
icu_properties_data = { version = ">=2.1, <2.2" }
icu_provider = { version = ">=2.1, <2.2" }

# Wordlist for invite codes
lazy_static = "1.4"

# Test mode
once_cell = "1.19"

# Nostr integration (bulletin board discovery)
nostr-sdk = "0.30"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regex for validation
regex = "1.10"

# HTTP client for ETH JSON-RPC
reqwest = { version = "0.12", features = ["json"] }

# secp256k1 signing for ETH transactions
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }

# Persistent storage
sled = "0.34"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
